  This specifically caused problems with Rich Faces 3.3.0's messages component, which adds a LabeledFacesMessage that requires a FacesContext to be serialized.
* Fixed bug where a FlowExecution's flashScope and MessageContext were not cleared when a user had already completed a render response (SWF-1089).

Improvements
* Added org.springframework.webflow dm Server library definition for use in a dm Server deployment environment (SWF-1067)
* Strengthened contract for response-related methods in ExternalContext.  Specifically, calling any of the requestRedirect methods also now completes the response.
  If you attempt to complete a response more than once against an ExternalContext, an IllegalStateException is thrown.

Changes in version 2.0.6 (2009.03.12)
-------------------------------------
General
* Changed Maven artifact ids for the org.springframework.webflow projects to be consistent with other Spring artifacts published to Maven Central (SWF-993).
  This change was made to prevent conflicts when resolving artifacts from both Maven Central and the OSGi-ready SpringSource Bundle Repository.
  NOTE: this change will require an artifact-id update as well as a version update to your poms that obtain Spring Web Flow artifacts from Maven Central.
  See the reference documentation for updated instructions on obtaining web flow artifacts from Maven Central.

Bug Fixes
* Fixed bug where ViewState and EndState still sent a response even if another artifact, such as an Action, handled the response by marking ExternalContext.setResponseComplete() (SWF-1061)
* Fixed bug where FlowHandlerMapping could not handle null flow id scenarios (SWF-968)
* Fixed bug where flow ids were not properly generated when loading flow resources using classpath*: notation (SWF-988, SWF-992)
* Fixed bug where file extension was left off URLs generated by Web Flow when servlet mapping was extension-based e.g. *.htm (SWF-988)